Remove personal seed data

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
               <div class="assistant-box">
                 <div class="assistant-title">Mamdou</div>
                 <div class="assistant-sub">Ask, add bills, or run commands in one box.</div>
-                <textarea id="llm-agent-input" class="assistant-input" rows="3" placeholder="Try: “add Comcast $90, Tesla $1300 on the 1st” or “mark tesla paid”"></textarea>
+                <textarea id="llm-agent-input" class="assistant-input" rows="3" placeholder="Try: “add Rent $1200 on the 1st, Electric $140 on the 10th” or “mark rent paid”"></textarea>
                 <div class="assistant-actions">
                   <button id="llm-agent-send" class="btn-small btn-primary">Send</button>
                 </div>
