Log agent commands and harden LLM actions

--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,10 @@
                     <button id="llm-agent-cancel" class="btn-pill">Cancel</button>
                   </div>
                   <div id="llm-agent-history" class="assistant-thread"></div>
+                  <div class="assistant-log">
+                    <div class="assistant-log-heading">Command log</div>
+                    <div id="llm-command-log" class="assistant-log-list"></div>
+                  </div>
                 </div>
               </div>
             </div>
