Harden PWA storage and add reset local data

--- a/public/index.html
+++ b/public/index.html
@@ -319,6 +319,7 @@
             Import backup (JSON)
             <input id="import-backup" type="file" accept="application/json" />
           </label>
+          <button id="reset-local" class="ghost-btn danger">Reset local data</button>
         </div>
         <div class="modal-footer-hint">Saved in this browser. To move devices: Export JSON → Import on the new device.</div>
       </div>
