--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Au Jour Le Jour</title>
     <link rel="stylesheet" href="/styles.css" />
+    <script>
+      (function () {
+        const params = new URLSearchParams(window.location.search);
+        if (!params.has("reset")) return;
+        const clear = async () => {
+          try {
+            if ("serviceWorker" in navigator) {
+              const regs = await navigator.serviceWorker.getRegistrations();
+              await Promise.all(regs.map((reg) => reg.unregister()));
+            }
+            if ("caches" in window) {
+              const keys = await caches.keys();
+              await Promise.all(keys.map((key) => caches.delete(key)));
+            }
+            await new Promise((resolve) => {
+              const req = indexedDB.deleteDatabase("ajl_pwa");
+              req.onsuccess = () => resolve();
+              req.onerror = () => resolve();
+              req.onblocked = () => resolve();
+            });
+          } finally {
+            const cleanUrl = window.location.origin + window.location.pathname;
+            window.location.replace(cleanUrl);
+          }
+        };
+        clear();
+      })();
+    </script>
   </head>
   <body>
     <header class="topbar">
